[tool.poetry]
name = "sqlalchemy_demo"
version = "0.1.0"
description = ""
authors = ["Matthew Pang <ppppfly@126.com>"]

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.4.39"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

